--- a/final_project_group9.ipynb
+++ b/final_project_group9.ipynb
@@ -13,6 +13,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3069807f",
+   "metadata": {},
+   "source": [
+    "## Intro"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75a162ad",
+   "metadata": {},
+   "source": [
+    "The objective of this project is to predict the overall happiness of a country and identify certain characteristics/features of a nation which may be strongly correlated with a higher happiness score. The happiness score is determined from the World Happiness Report which collects and determines a country’s happiness and ranking based off the Gallup World Poll in which life evaluation questions are asked of a countries population. Determining a nations state of happiness and correlating factors is important as this information is used by governments, health organizations, economists, psychologists and other organizations to influence research and policy-making decisions and assess the progress of a nation.\n",
+    "\n",
+    "GOAL: Build a system to predict the Cantril Ladder based happiness score....blah blah finish"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "aa17bde7",
    "metadata": {},
    "source": [
@@ -30,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3cf41f8f",
    "metadata": {},
    "outputs": [],
@@ -64,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d1a54bf2",
    "metadata": {},
    "outputs": [],
@@ -82,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9d343c28",
    "metadata": {},
    "outputs": [
@@ -126,8 +144,479 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "677a1b4f",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ladder score</th>\n",
+       "      <th>Standard error of ladder score</th>\n",
+       "      <th>upperwhisker</th>\n",
+       "      <th>lowerwhisker</th>\n",
+       "      <th>Logged GDP per capita</th>\n",
+       "      <th>Social support</th>\n",
+       "      <th>Healthy life expectancy</th>\n",
+       "      <th>Freedom to make life choices</th>\n",
+       "      <th>Generosity</th>\n",
+       "      <th>Perceptions of corruption</th>\n",
+       "      <th>Ladder score in Dystopia</th>\n",
+       "      <th>Explained by: Log GDP per capita</th>\n",
+       "      <th>Explained by: Social support</th>\n",
+       "      <th>Explained by: Healthy life expectancy</th>\n",
+       "      <th>Explained by: Freedom to make life choices</th>\n",
+       "      <th>Explained by: Generosity</th>\n",
+       "      <th>Explained by: Perceptions of corruption</th>\n",
+       "      <th>Dystopia + residual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>149.000000</td>\n",
+       "      <td>149.000000</td>\n",
+       "      <td>149.000000</td>\n",
+       "      <td>149.000000</td>\n",
+       "      <td>149.000000</td>\n",
+       "      <td>149.000000</td>\n",
+       "      <td>149.000000</td>\n",
+       "      <td>149.000000</td>\n",
+       "      <td>149.000000</td>\n",
+       "      <td>149.000000</td>\n",
+       "      <td>1.490000e+02</td>\n",
+       "      <td>149.000000</td>\n",
+       "      <td>149.000000</td>\n",
+       "      <td>149.000000</td>\n",
+       "      <td>149.000000</td>\n",
+       "      <td>149.000000</td>\n",
+       "      <td>149.000000</td>\n",
+       "      <td>149.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>5.532839</td>\n",
+       "      <td>0.058752</td>\n",
+       "      <td>5.648007</td>\n",
+       "      <td>5.417631</td>\n",
+       "      <td>9.432208</td>\n",
+       "      <td>0.814745</td>\n",
+       "      <td>64.992799</td>\n",
+       "      <td>0.791597</td>\n",
+       "      <td>-0.015134</td>\n",
+       "      <td>0.727450</td>\n",
+       "      <td>2.430000e+00</td>\n",
+       "      <td>0.977161</td>\n",
+       "      <td>0.793315</td>\n",
+       "      <td>0.520161</td>\n",
+       "      <td>0.498711</td>\n",
+       "      <td>0.178047</td>\n",
+       "      <td>0.135141</td>\n",
+       "      <td>2.430329</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.073924</td>\n",
+       "      <td>0.022001</td>\n",
+       "      <td>1.054330</td>\n",
+       "      <td>1.094879</td>\n",
+       "      <td>1.158601</td>\n",
+       "      <td>0.114889</td>\n",
+       "      <td>6.762043</td>\n",
+       "      <td>0.113332</td>\n",
+       "      <td>0.150657</td>\n",
+       "      <td>0.179226</td>\n",
+       "      <td>5.347044e-15</td>\n",
+       "      <td>0.404740</td>\n",
+       "      <td>0.258871</td>\n",
+       "      <td>0.213019</td>\n",
+       "      <td>0.137888</td>\n",
+       "      <td>0.098270</td>\n",
+       "      <td>0.114361</td>\n",
+       "      <td>0.537645</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2.523000</td>\n",
+       "      <td>0.026000</td>\n",
+       "      <td>2.596000</td>\n",
+       "      <td>2.449000</td>\n",
+       "      <td>6.635000</td>\n",
+       "      <td>0.463000</td>\n",
+       "      <td>48.478000</td>\n",
+       "      <td>0.382000</td>\n",
+       "      <td>-0.288000</td>\n",
+       "      <td>0.082000</td>\n",
+       "      <td>2.430000e+00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.648000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>4.852000</td>\n",
+       "      <td>0.043000</td>\n",
+       "      <td>4.991000</td>\n",
+       "      <td>4.706000</td>\n",
+       "      <td>8.541000</td>\n",
+       "      <td>0.750000</td>\n",
+       "      <td>59.802000</td>\n",
+       "      <td>0.718000</td>\n",
+       "      <td>-0.126000</td>\n",
+       "      <td>0.667000</td>\n",
+       "      <td>2.430000e+00</td>\n",
+       "      <td>0.666000</td>\n",
+       "      <td>0.647000</td>\n",
+       "      <td>0.357000</td>\n",
+       "      <td>0.409000</td>\n",
+       "      <td>0.105000</td>\n",
+       "      <td>0.060000</td>\n",
+       "      <td>2.138000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>5.534000</td>\n",
+       "      <td>0.054000</td>\n",
+       "      <td>5.625000</td>\n",
+       "      <td>5.413000</td>\n",
+       "      <td>9.569000</td>\n",
+       "      <td>0.832000</td>\n",
+       "      <td>66.603000</td>\n",
+       "      <td>0.804000</td>\n",
+       "      <td>-0.036000</td>\n",
+       "      <td>0.781000</td>\n",
+       "      <td>2.430000e+00</td>\n",
+       "      <td>1.025000</td>\n",
+       "      <td>0.832000</td>\n",
+       "      <td>0.571000</td>\n",
+       "      <td>0.514000</td>\n",
+       "      <td>0.164000</td>\n",
+       "      <td>0.101000</td>\n",
+       "      <td>2.509000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.255000</td>\n",
+       "      <td>0.070000</td>\n",
+       "      <td>6.344000</td>\n",
+       "      <td>6.128000</td>\n",
+       "      <td>10.421000</td>\n",
+       "      <td>0.905000</td>\n",
+       "      <td>69.600000</td>\n",
+       "      <td>0.877000</td>\n",
+       "      <td>0.079000</td>\n",
+       "      <td>0.845000</td>\n",
+       "      <td>2.430000e+00</td>\n",
+       "      <td>1.323000</td>\n",
+       "      <td>0.996000</td>\n",
+       "      <td>0.665000</td>\n",
+       "      <td>0.603000</td>\n",
+       "      <td>0.239000</td>\n",
+       "      <td>0.174000</td>\n",
+       "      <td>2.794000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>7.842000</td>\n",
+       "      <td>0.173000</td>\n",
+       "      <td>7.904000</td>\n",
+       "      <td>7.780000</td>\n",
+       "      <td>11.647000</td>\n",
+       "      <td>0.983000</td>\n",
+       "      <td>76.953000</td>\n",
+       "      <td>0.970000</td>\n",
+       "      <td>0.542000</td>\n",
+       "      <td>0.939000</td>\n",
+       "      <td>2.430000e+00</td>\n",
+       "      <td>1.751000</td>\n",
+       "      <td>1.172000</td>\n",
+       "      <td>0.897000</td>\n",
+       "      <td>0.716000</td>\n",
+       "      <td>0.541000</td>\n",
+       "      <td>0.547000</td>\n",
+       "      <td>3.482000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Ladder score  Standard error of ladder score  upperwhisker  \\\n",
+       "count    149.000000                      149.000000    149.000000   \n",
+       "mean       5.532839                        0.058752      5.648007   \n",
+       "std        1.073924                        0.022001      1.054330   \n",
+       "min        2.523000                        0.026000      2.596000   \n",
+       "25%        4.852000                        0.043000      4.991000   \n",
+       "50%        5.534000                        0.054000      5.625000   \n",
+       "75%        6.255000                        0.070000      6.344000   \n",
+       "max        7.842000                        0.173000      7.904000   \n",
+       "\n",
+       "       lowerwhisker  Logged GDP per capita  Social support  \\\n",
+       "count    149.000000             149.000000      149.000000   \n",
+       "mean       5.417631               9.432208        0.814745   \n",
+       "std        1.094879               1.158601        0.114889   \n",
+       "min        2.449000               6.635000        0.463000   \n",
+       "25%        4.706000               8.541000        0.750000   \n",
+       "50%        5.413000               9.569000        0.832000   \n",
+       "75%        6.128000              10.421000        0.905000   \n",
+       "max        7.780000              11.647000        0.983000   \n",
+       "\n",
+       "       Healthy life expectancy  Freedom to make life choices  Generosity  \\\n",
+       "count               149.000000                    149.000000  149.000000   \n",
+       "mean                 64.992799                      0.791597   -0.015134   \n",
+       "std                   6.762043                      0.113332    0.150657   \n",
+       "min                  48.478000                      0.382000   -0.288000   \n",
+       "25%                  59.802000                      0.718000   -0.126000   \n",
+       "50%                  66.603000                      0.804000   -0.036000   \n",
+       "75%                  69.600000                      0.877000    0.079000   \n",
+       "max                  76.953000                      0.970000    0.542000   \n",
+       "\n",
+       "       Perceptions of corruption  Ladder score in Dystopia  \\\n",
+       "count                 149.000000              1.490000e+02   \n",
+       "mean                    0.727450              2.430000e+00   \n",
+       "std                     0.179226              5.347044e-15   \n",
+       "min                     0.082000              2.430000e+00   \n",
+       "25%                     0.667000              2.430000e+00   \n",
+       "50%                     0.781000              2.430000e+00   \n",
+       "75%                     0.845000              2.430000e+00   \n",
+       "max                     0.939000              2.430000e+00   \n",
+       "\n",
+       "       Explained by: Log GDP per capita  Explained by: Social support  \\\n",
+       "count                        149.000000                    149.000000   \n",
+       "mean                           0.977161                      0.793315   \n",
+       "std                            0.404740                      0.258871   \n",
+       "min                            0.000000                      0.000000   \n",
+       "25%                            0.666000                      0.647000   \n",
+       "50%                            1.025000                      0.832000   \n",
+       "75%                            1.323000                      0.996000   \n",
+       "max                            1.751000                      1.172000   \n",
+       "\n",
+       "       Explained by: Healthy life expectancy  \\\n",
+       "count                             149.000000   \n",
+       "mean                                0.520161   \n",
+       "std                                 0.213019   \n",
+       "min                                 0.000000   \n",
+       "25%                                 0.357000   \n",
+       "50%                                 0.571000   \n",
+       "75%                                 0.665000   \n",
+       "max                                 0.897000   \n",
+       "\n",
+       "       Explained by: Freedom to make life choices  Explained by: Generosity  \\\n",
+       "count                                  149.000000                149.000000   \n",
+       "mean                                     0.498711                  0.178047   \n",
+       "std                                      0.137888                  0.098270   \n",
+       "min                                      0.000000                  0.000000   \n",
+       "25%                                      0.409000                  0.105000   \n",
+       "50%                                      0.514000                  0.164000   \n",
+       "75%                                      0.603000                  0.239000   \n",
+       "max                                      0.716000                  0.541000   \n",
+       "\n",
+       "       Explained by: Perceptions of corruption  Dystopia + residual  \n",
+       "count                               149.000000           149.000000  \n",
+       "mean                                  0.135141             2.430329  \n",
+       "std                                   0.114361             0.537645  \n",
+       "min                                   0.000000             0.648000  \n",
+       "25%                                   0.060000             2.138000  \n",
+       "50%                                   0.101000             2.509000  \n",
+       "75%                                   0.174000             2.794000  \n",
+       "max                                   0.547000             3.482000  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d73cbd53",
+   "metadata": {},
+   "source": [
+    "How many NA values are in the data?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a610c59",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed4044a2",
+   "metadata": {},
+   "source": [
+    "Does the dataset contain much obviously bad data?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "185c5085",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ded4d5f7",
+   "metadata": {},
+   "source": [
+    "What are the types of the columns?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6949223",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcb7fad4",
+   "metadata": {},
+   "source": [
+    "## Initial Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af2091eb",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bc88942",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a2e1912",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ead93103",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "571d1e1c",
+   "metadata": {},
+   "source": [
+    "## Exploration and Visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ff90393",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd262ed8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73764304",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "711d881e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1509444",
+   "metadata": {},
+   "source": [
+    "## Machine Learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c9a6021",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c78f889e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4220fab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20d0f01f",
    "metadata": {},
    "outputs": [],
    "source": []
