--- a/final_project_group9.ipynb
+++ b/final_project_group9.ipynb
@@ -5,7 +5,7 @@
    "id": "58c580ce",
    "metadata": {},
    "source": [
-    "# CST383 - Final Project\n",
+    "# CST383 - Final Project STUFF\n",
     "## National Happiness\n",
     "### Group 9 - Enigma Labs: Alonso Vega, Daniel Letterman, Gabe Williams, and Nicholas Fotinakes\n",
     "---"
