--- a/final_project_group9.ipynb
+++ b/final_project_group9.ipynb
@@ -53,8 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#test\n",
-    "#import packages\n",
+    "#import packages \n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -625,7 +624,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -640,6 +639,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "496791ece5e683027f8a4f0c22031afc1f109662cd2ea2f0a4c91af3abe8c480"
+   }
   }
  },
  "nbformat": 4,
