Adding Removal of Columns
Adds the removal of unnecessary columns and covered cleaning the data as well.

--- a/final_project_group9.ipynb
+++ b/final_project_group9.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "3cf41f8f",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "d1a54bf2",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "9d343c28",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "677a1b4f",
    "metadata": {
     "scrolled": false
@@ -446,7 +446,7 @@
        "max                                   0.547000             3.482000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,19 +519,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "2bc88942",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Remove all other columns that aren't important:\n",
+    "#Regional indicator\n",
+    "#Standard error of ladder score\n",
+    "#upper whisker\n",
+    "#lower whisker\n",
+    "#ladder score in dystopia\n",
+    "#Explained by: Log GDP per captia\n",
+    "#Explained by: Social Support\n",
+    "#Explained by: Healthy life expectancy\n",
+    "#Explained by: Freedom to make life choices\n",
+    "#Explained by: Generosity\n",
+    "#Explained by: Perceptions of courrption\n",
+    "#Dystpoia + Residual\n",
+    "to_drop= ['Regional indicator', 'Standard error of ladder score', 'upperwhisker', 'lowerwhisker',\n",
+    "            'Ladder score in Dystopia', 'Explained by: Log GDP per capita', 'Explained by: Social support', \n",
+    "            'Explained by: Healthy life expectancy', 'Explained by: Freedom to make life choices', 'Explained by: Generosity', \\\n",
+    "            'Explained by: Perceptions of corruption', 'Dystopia + residual']\n",
+    "df.drop(columns=to_drop, inplace=True)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "4a2e1912",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 149 entries, 0 to 148\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column                        Non-Null Count  Dtype  \n",
+      "---  ------                        --------------  -----  \n",
+      " 0   Country name                  149 non-null    object \n",
+      " 1   Ladder score                  149 non-null    float64\n",
+      " 2   Logged GDP per capita         149 non-null    float64\n",
+      " 3   Social support                149 non-null    float64\n",
+      " 4   Healthy life expectancy       149 non-null    float64\n",
+      " 5   Freedom to make life choices  149 non-null    float64\n",
+      " 6   Generosity                    149 non-null    float64\n",
+      " 7   Perceptions of corruption     149 non-null    float64\n",
+      "dtypes: float64(7), object(1)\n",
+      "memory usage: 9.4+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Country name                    0\n",
+       "Ladder score                    0\n",
+       "Logged GDP per capita           0\n",
+       "Social support                  0\n",
+       "Healthy life expectancy         0\n",
+       "Freedom to make life choices    0\n",
+       "Generosity                      0\n",
+       "Perceptions of corruption       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Check if columns are clean\n",
+    "df.info()\n",
+    "#dtypes are good! All predictor columns are clean\n",
+    "df.isna().sum()\n",
+    "df.isnull().sum()\n",
+    "#no extra NaN or null values hiding\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -642,7 +710,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "496791ece5e683027f8a4f0c22031afc1f109662cd2ea2f0a4c91af3abe8c480"
+    "hash": "56b9e10d067d623cdf45314c4d2d7f4006471a3eafbbf5b67dc396d9d2086f1f"
    }
   }
  },
