--- a/final_project_group9.ipynb
+++ b/final_project_group9.ipynb
@@ -618,12 +618,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "4ff90393",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Description:"
+   ]
   },
   {
    "cell_type": "code",
@@ -631,15 +631,136 @@
    "id": "fd262ed8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.describe().apply(lambda s: s.apply('{0:.2f}'.format))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5337ff7f",
+   "metadata": {},
+   "source": [
+    "Overall Happiness of the first 10 countries(Country name)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73764304",
+   "id": "c549bfc0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "happiness_by_country = df.groupby(['Country name'])['Ladder score'].mean()\n",
+    "print(happiness_by_country.head(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bd86616",
+   "metadata": {},
+   "source": [
+    "Overall Happiness of the first 10 countries(Regional indicator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2846c95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "happiness_by_country = df.groupby(['Regional indicator'])['Ladder score'].mean()\n",
+    "print(happiness_by_country.head(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bc6ee2d",
+   "metadata": {},
+   "source": [
+    "Correlation Matrix(darker colors shows stronger correlations/happiness)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9fe671c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr = df.corr()\n",
+    "sns.heatmap(corr, annot=True)\n",
+    "plt.title('Correlation matrix of variables')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e166296",
+   "metadata": {},
+   "source": [
+    "All numerical features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b057a0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_df = df.select_dtypes(include=['float64'])\n",
+    "summary_stats = numeric_df.describe()\n",
+    "print(summary_stats)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "437dc2ce",
+   "metadata": {},
+   "source": [
+    "A look at all of the numerical features as plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecd1c6e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_df = df.select_dtypes(include=['float64'])\n",
+    "numeric_df.hist(bins=30, figsize=(20,15))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39f71905",
+   "metadata": {},
+   "source": [
+    "A look at all of the numerical features as box plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ae2c04f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_df = df.select_dtypes(include=['float64'])\n",
+    "numeric_df.plot(kind='box', figsize=(20,15), vert=False)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73764304",
+   "metadata": {},
+   "source": [
+    "Histograms of single numeric variables"
+   ]
   },
   {
    "cell_type": "code",
@@ -647,7 +768,225 @@
    "id": "711d881e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sns.histplot(df['Logged GDP per capita'], kde=False)\n",
+    "plt.title('Histogram of GDP per capita')\n",
+    "plt.xlabel('GDP per capita')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "000f8c18",
+   "metadata": {},
+   "source": [
+    "Bar plots of value counts of single categorical variables\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95197263",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variable = 'Regional indicator'\n",
+    "counts = df[variable].value_counts()\n",
+    "counts.plot.bar()\n",
+    "plt.title(f'Value counts of {variable}')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e703dbd",
+   "metadata": {},
+   "source": [
+    "Grid of scatter plots (numeric variables)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "852b9b56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_vars = ['Ladder score', 'Logged GDP per capita', 'Social support', 'Healthy life expectancy']\n",
+    "var = len(numeric_vars)\n",
+    "for i in range(var):\n",
+    "    for j in range(var):\n",
+    "        plt.subplot(var, var, i * var + j + 1)\n",
+    "        if i == j:\n",
+    "            df[numeric_vars[i]].hist(bins=30)\n",
+    "        else:\n",
+    "            plt.scatter(df[numeric_vars[j]], df[numeric_vars[i]])\n",
+    "        plt.xlabel(numeric_vars[j])\n",
+    "        plt.ylabel(numeric_vars[i])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b16392d",
+   "metadata": {},
+   "source": [
+    "Violin/bar plots for categorical/numeric variable pairs\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71cc7491",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_col = 'Ladder score'\n",
+    "categorical_col = 'Regional indicator'\n",
+    "sns.violinplot(x=categorical_col, y=numeric_col, data=df)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90d29c14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_col = 'Ladder score'\n",
+    "categorical_col = 'Regional indicator'\n",
+    "sns.barplot(x=categorical_col, y=numeric_col, data=df)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f0e5f70",
+   "metadata": {},
+   "source": [
+    "Three-variable plots, such as scatterplots with color or shape of points as a third variable, or grouped bar plots\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd4aa0d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_col = 'Ladder score'\n",
+    "y_col = 'Logged GDP per capita'\n",
+    "color_col = 'Regional indicator'\n",
+    "sns.scatterplot(x=x_col, y=y_col, hue=color_col, data=df)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b55ecd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_col = 'Ladder score'\n",
+    "group_col = 'Regional indicator'\n",
+    "grouped = df.groupby([group_col])\n",
+    "grouped_mean = grouped[numeric_col].mean()\n",
+    "grouped_mean.plot(kind='bar')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef064236",
+   "metadata": {},
+   "source": [
+    "Ladder score showing overall happiness scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9a0e810",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(df[\"Ladder score\"], bins=10)\n",
+    "plt.xlabel(\"Ladder score\")\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75611374",
+   "metadata": {},
+   "source": [
+    "Relationship between overall happiness and all factors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fd04389",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(df[\"Logged GDP per capita\"], df[\"Ladder score\"])\n",
+    "plt.xlabel(\"Logged GDP per capita\")\n",
+    "plt.ylabel(\"Ladder score\")\n",
+    "plt.show()\n",
+    "\n",
+    "plt.scatter(df[\"Social support\"], df[\"Ladder score\"])\n",
+    "\n",
+    "plt.xlabel(\"Social support\")\n",
+    "plt.ylabel(\"Ladder score\")\n",
+    "plt.show()\n",
+    "\n",
+    "plt.scatter(df[\"Healthy life expectancy\"], df[\"Ladder score\"])\n",
+    "plt.xlabel(\"Healthy life expectancy\")\n",
+    "plt.ylabel(\"Ladder score\")\n",
+    "plt.show()\n",
+    "\n",
+    "plt.scatter(df[\"Freedom to make life choices\"], df[\"Ladder score\"])\n",
+    "plt.xlabel(\"Freedom to make life choices\")\n",
+    "plt.ylabel(\"Ladder score\")\n",
+    "plt.show()\n",
+    "\n",
+    "plt.scatter(df[\"Generosity\"], df[\"Ladder score\"])\n",
+    "plt.xlabel(\"Generosity\")\n",
+    "plt.ylabel(\"Ladder score\")\n",
+    "plt.show()\n",
+    "plt.scatter(df[\"Perceptions of corruption\"], df[\"Ladder score\"])\n",
+    "\n",
+    "plt.xlabel(\"Perceptions of corruption\")\n",
+    "plt.ylabel(\"Ladder score\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de1c9c7d",
+   "metadata": {},
+   "source": [
+    "Healthy life expectancy: scatterplot of Ladder score vs Social support"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad5ec3a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(df['Social support'], df['Ladder score'], c=df['Healthy life expectancy'], cmap='viridis')\n",
+    "plt.xlabel('Social support')\n",
+    "plt.ylabel('Ladder score')\n",
+    "plt.colorbar()\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -710,7 +1049,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "56b9e10d067d623cdf45314c4d2d7f4006471a3eafbbf5b67dc396d9d2086f1f"
+    "hash": "496791ece5e683027f8a4f0c22031afc1f109662cd2ea2f0a4c91af3abe8c480"
    }
   }
  },
