--- a/final_project_group9.ipynb
+++ b/final_project_group9.ipynb
@@ -8,7 +8,7 @@
     "# CST383 - Final Project \n",
     "## Predicting National Happiness\n",
     "\n",
-    "Authors - Enigma Labs: Alonso Vega, Daniel Letterman, Gabe Williams, and Nicholas Fotinakes\n"
+    "**Authors** - Group 9, Enigma Labs: Alonso Vega, Daniel Letterman, Gabe Williams, and Nicholas Fotinakes\n"
    ]
   },
   {
@@ -18,13 +18,31 @@
    "source": [
     "## Intro\n",
     "\n",
+    "**GOAL:** Build a system to predict the Cantril Ladder based Happiness Score of a country using the six numerical predictors: 'Logged GDP per capita', 'Social support', 'Healthy life expectancy', 'Freedom to make life choices', 'Generosity', and 'Perceptions of corruption.' \n",
+    "\n",
+    "**Details:**\n",
     "The objective of this project is to predict the overall happiness of a country and identify certain characteristics/features of a nation which may be strongly correlated with a higher happiness score. The happiness score is determined from the World Happiness Report which collects and determines a country’s happiness and ranking based off the Gallup World Poll in which life evaluation questions are asked of a countries population. Determining a nations state of happiness and correlating factors is important as this information is used by governments, health organizations, economists, psychologists and other organizations to influence research and policy-making decisions and assess the progress of a nation.\n",
     "\n",
-    "**GOAL:** Build a system to predict the Cantril Ladder based Happiness Score of a country using the six predictors: 'Logged GDP per capita', 'Social support', 'Healthy life expectancy', 'Freedom to make life choices', 'Generosity', and 'Perceptions of corruption.' \n",
     "\n",
-    "**Dataset:** The dataset is updated from: https://www.kaggle.com/datasets/ajaypalsinghlo/world-happiness-report-2021?select=world-happiness-report-2021.csv (which is originally sourced from https://worldhappiness.report/ed/2021/).  \n",
+    "**Dataset:** The dataset 'World Happiness Report 2021' is obtained from: https://www.kaggle.com/datasets/ajaypalsinghlo/world-happiness-report-2021?select=world-happiness-report-2021.csv (which is originally sourced from https://worldhappiness.report/ed/2021/) and is also saved in the github repository used in this project.  \n",
     "\n",
-    "The dataset includes information collected for the 2021 World Happiness Report. The columns of the dataset include country names, region, and a ladder score. The ladder score is the overall happiness score of a country based on the numerical scale 0-10, 0 being the least happy and 10 being the most. This score is determined from the Gallup World Poll in which researchers ask respondents main life evaluation questions based off a technique called the Cantril ladder to determine the ladder score. In addition to the country and score columns, the dataset includes columns that represent different factors of a nation which may be influential factors to the overall happiness score of a country. The columns of interest for this project include the logged GDP per capita, life expectancy, social support, freedom to make life choices, generosity, and perceptions of corruption. \n",
+    "The dataset includes information collected for the 2021 World Happiness Report. The columns of the dataset include country names, regions, ladder score, numerical survey data, and additional features. The ladder score is the overall happiness score of a country based on the numerical scale 0-10, 0 being the least happy and 10 being the most. This score is determined from the Gallup World Poll in which researchers ask respondents main life evaluation questions based off a technique called the Cantril ladder to determine the ladder score as well as some numerical data about the country. These columns make up the features of interest for this project and include: 'Logged GDP per capita', 'Social support', 'Healthy life expectancy', 'Freedom to make life choices', 'Generosity', and 'Perceptions of corruption.' Only the predictors and ladder scores will be used for the purposes of this project and the additional dataset features will be dropped. We predict there may be certain features within our predictors that have a higher correlation to the ladder score such as the logged GDP and life expectancy. While it appears predictors are numerical as is, there may need to be some data munging to scale and normalize this data.\n",
+    "\n",
+    "**Additional Details on Predictor Features:**\n",
+    "\n",
+    "Healthy Life Expectancy – data extracted from the World Health Organization’s Global Health Observatory data repository.\n",
+    "\n",
+    "Social Support – the national average of binary responses to the GWP question “If you were in trouble, do you have relatives or friends you can count on to help you whenever you need them, or not?”\n",
+    "\n",
+    "Freedom to make life choices – national average of responses to GWP question “Are you satisfied or dissatisfied with your freedom to choose what you do with your life?”\n",
+    "\n",
+    "Generosity – residual of regressing national average of response to the GWP question, “Have you donated money to a charity in the past month?” on GDP per capita.\n",
+    "\n",
+    "Corruption Perception – national average of two binary response GWP questions, “Is corruption widespread within businesses or not?” and “Is corruption widespread throughout the government or not?”\n",
+    "\n",
+    "Typical sample size per country is 1,000 people and dataset includes 149 countries.\n",
+    "\n",
+    "Additional information is from the 2021 World Happiness Report Statistical Appendix 1: https://happiness-report.s3.amazonaws.com/2021/Appendix1WHR2021C2.pdf\n",
     "\n",
     "---"
    ]
@@ -42,7 +60,7 @@
    "id": "1b871db1",
    "metadata": {},
    "source": [
-    "Import the required packages to explore data:"
+    "Import the required packages for project, we will be using NumPy, Pandas, Seaborn, Matplotlib, and Scikit-learn:"
    ]
   },
   {
@@ -58,6 +76,9 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import rcParams\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
     "\n",
     "# allow output to span multiple output lines in the console\n",
     "pd.set_option('display.max_columns', 500)\n",
@@ -839,25 +860,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bd86616",
-   "metadata": {},
-   "source": [
-    "Overall Happiness of the first 10 countries(Regional indicator)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "c2846c95",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#happiness_by_country = df.groupby(['Regional indicator'])['Ladder score'].mean()\n",
-    "#print(happiness_by_country.head(10))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "8bc6ee2d",
    "metadata": {},
    "source": [
@@ -866,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "f9fe671c",
    "metadata": {},
    "outputs": [
@@ -898,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "1b057a0c",
    "metadata": {},
    "outputs": [
@@ -954,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "ecd1c6e7",
    "metadata": {},
    "outputs": [
@@ -985,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "6ae2c04f",
    "metadata": {},
    "outputs": [
@@ -1016,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "711d881e",
    "metadata": {},
    "outputs": [
@@ -1041,28 +1043,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "000f8c18",
-   "metadata": {},
-   "source": [
-    "Bar plots of value counts of single categorical variables\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "95197263",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#variable = 'Regional indicator'\n",
-    "#counts = df[variable].value_counts()\n",
-    "#counts.plot.bar()\n",
-    "#plt.title(f'Value counts of {variable}')\n",
-    "#plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "3e703dbd",
    "metadata": {},
    "source": [
@@ -1071,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "852b9b56",
    "metadata": {},
    "outputs": [
@@ -1103,77 +1083,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b16392d",
-   "metadata": {},
-   "source": [
-    "Violin/bar plots for categorical/numeric variable pairs\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "71cc7491",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#numeric_col = 'Ladder score'\n",
-    "#categorical_col = 'Regional indicator'\n",
-    "#sns.violinplot(x=categorical_col, y=numeric_col, data=df)\n",
-    "#plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "90d29c14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#numeric_col = 'Ladder score'\n",
-    "#categorical_col = 'Regional indicator'\n",
-    "#sns.barplot(x=categorical_col, y=numeric_col, data=df)\n",
-    "#plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7f0e5f70",
-   "metadata": {},
-   "source": [
-    "Three-variable plots, such as scatterplots with color or shape of points as a third variable, or grouped bar plots\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "dd4aa0d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#x_col = 'Ladder score'\n",
-    "#y_col = 'Logged GDP per capita'\n",
-    "#color_col = 'Regional indicator'\n",
-    "#sns.scatterplot(x=x_col, y=y_col, hue=color_col, data=df)\n",
-    "#plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "9b55ecd0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#numeric_col = 'Ladder score'\n",
-    "#group_col = 'Regional indicator'\n",
-    "#grouped = df.groupby([group_col])\n",
-    "#grouped_mean = grouped[numeric_col].mean()\n",
-    "#grouped_mean.plot(kind='bar')\n",
-    "#plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "ef064236",
    "metadata": {},
    "source": [
@@ -1182,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "b9a0e810",
    "metadata": {},
    "outputs": [
@@ -1214,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "9fd04389",
    "metadata": {
     "scrolled": false
@@ -1324,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "ad5ec3a1",
    "metadata": {},
    "outputs": [
@@ -1356,20 +1265,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c9a6021",
+   "cell_type": "markdown",
+   "id": "b39f6d5e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Setting up test/train dataset split for KNN:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "c78f889e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X = np.array(df[['Logged GDP per capita', 'Social support', 'Healthy life expectancy', 'Freedom to make life choices', 'Generosity', 'Perceptions of corruption']])\n",
+    "y = np.array(df['Ladder score'])\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "xTrain, xTest, yTrain, yTest = train_test_split(X, y, test_size=0.30, random_state=10)\n",
+    "xTrain = scaler.fit_transform(xTrain)\n",
+    "xTest = scaler.transform(xTest)\n",
+    "\n",
+    "knnRe = KNeighborsRegressor()\n",
+    "knnRe.fit(xTrain, yTrain)\n",
+    "\n",
+    "predictions = knnRe.predict(xTest)\n",
+    "mseBlind = ((yTrain.mean() - yTest)**2).mean()"
+   ]
   },
   {
    "cell_type": "code",
