--- a/final_project_group9.ipynb
+++ b/final_project_group9.ipynb
@@ -8,7 +8,7 @@
     "# CST383 - Final Project \n",
     "## Predicting National Happiness\n",
     "\n",
-    "**Authors** - Group 9, Enigma Labs: Alonso Vega, Daniel Letterman, Gabe Williams, and Nicholas Fotinakes\n"
+    "**Authors:** Alonso Vega, Daniel Letterman, Gabe Williams, and Nicholas Fotinakes\n"
    ]
   },
   {
@@ -1269,7 +1269,10 @@
    "id": "b39f6d5e",
    "metadata": {},
    "source": [
-    "Setting up test/train dataset split for KNN:"
+    "**KNN**\n",
+    "\n",
+    "Setting up test/train dataset split for KNN:\n",
+    "(Doing some preliminary testing)"
    ]
   },
   {
@@ -1277,9 +1280,20 @@
    "execution_count": 20,
    "id": "c78f889e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test RMSE: Baseline: 0.997412\n",
+      "Test RMSE: Default: 0.610811\n"
+     ]
+    }
+   ],
    "source": [
+    "#predictors\n",
     "X = np.array(df[['Logged GDP per capita', 'Social support', 'Healthy life expectancy', 'Freedom to make life choices', 'Generosity', 'Perceptions of corruption']])\n",
+    "#target\n",
     "y = np.array(df['Ladder score'])\n",
     "\n",
     "scaler = StandardScaler()\n",
@@ -1291,7 +1305,10 @@
     "knnRe.fit(xTrain, yTrain)\n",
     "\n",
     "predictions = knnRe.predict(xTest)\n",
-    "mseBlind = ((yTrain.mean() - yTest)**2).mean()"
+    "mseBlind = np.sqrt(((yTrain.mean() - yTest)**2).mean())\n",
+    "default_rmse = np.sqrt(((predictions - yTest)**2).mean())\n",
+    "print('Test RMSE: Baseline: {0:1f}'.format(mseBlind))\n",
+    "print('Test RMSE: Default: {0:1f}'.format(default_rmse))"
    ]
   },
   {
