--- a/final_project_group9.ipynb
+++ b/final_project_group9.ipynb
@@ -1273,6 +1273,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "95e06f71",
+   "metadata": {},
+   "source": [
+    "**Universal Variables**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc63bdc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictors = ['Logged GDP per capita', 'Social support', 'Healthy life expectancy', 'Freedom to make life choices', 'Generosity', 'Perceptions of corruption']\n",
+    "target =['Ladder score']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b39f6d5e",
    "metadata": {},
    "source": [
@@ -1324,7 +1343,7 @@
    "id": "e4220fab",
    "metadata": {},
    "source": [
-    "**Linear Regression**"
+    "## Linear Regression"
    ]
   },
   {
@@ -1452,7 +1471,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "220a26ae",
    "metadata": {},
@@ -1908,6 +1926,87 @@
    "source": [
     "Assess Bias/Variance"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34f8b8b8",
+   "metadata": {},
+   "source": [
+    "## Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06c9dfdf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DTreg = DecisionTreeRegressor(min_samples_split=10, min_samples_leaf=8, max_features='sqrt')\n",
+    "DTreg.fit(xTrain, yTrain)\n",
+    "dot_data = export_graphviz(DTreg, precision=2,\n",
+    "                     feature_names=predictors,  \n",
+    "                     proportion=True,\n",
+    "                     filled=True, rounded=True)\n",
+    "graph = graphviz.Source(dot_data)  \n",
+    "graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a3cdea8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make predictions and compute the accuracy\n",
+    "y_predict = DTreg.predict(xTest)\n",
+    "\n",
+    "#accuracy score\n",
+    "train_accuracy = DTreg.score(xTrain,yTrain)\n",
+    "test_accuracy = DTreg.score(xTest,yTest)\n",
+    "\n",
+    "print('Decision Tree train accuracy: {:.2f}%'.format(train_accuracy * 100))\n",
+    "print('Decision Tree test accuracy: {:.2f}%'.format(test_accuracy * 100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82307059",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#comparing results via scatter plot\n",
+    "plt.scatter(range(len(yTest)),yTest)\n",
+    "plt.scatter(range(len(y_predict)),y_predict, color='red')\n",
+    "plt.title('Actual vs Predicted results for Decision Tree Model')\n",
+    "plt.legend(['Actual', 'Predicted'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21abe81c",
+   "metadata": {},
+   "source": [
+    "**Note on the Decision Tree Model**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e8f539a",
+   "metadata": {},
+   "source": [
+    "The Decision Tree model has turned out to be fairly accurate. The accuracy can range between 18 to 63 percent. The variance of the accuracy of the model is fairly large depending on what columns are used from the selected predictors. However, it should be easy to get rid of some of the noise variables out of the model if tinkered with more."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aef603cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
